[gd_scene load_steps=3 format=3 uid="uid://qbxc5dfjvk6y"]

[ext_resource type="Script" uid="uid://c6j77x1wkvl1v" path="res://mini_cat.gd" id="1_bqy21"]
[ext_resource type="Texture2D" uid="uid://drfupn0sqf44s" path="res://Sprites/items/minicat.png" id="1_vukf4"]

[node name="mini-cat" type="Node2D"]
script = ExtResource("1_bqy21")

[node name="mini-cat-sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_vukf4")

[node name="bullet_point" type="Marker2D" parent="."]
position = Vector2(25, -1)

[node name="shot_time" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="shot_time" to="." method="_on_shot_time_timeout"]
